--- a/.github/workflows/eax.yml
+++ b/.github/workflows/eax.yml
@@ -51,5 +51,22 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.rust }}
           override: true
-      - run: cargo test --lib --release
-      - run: cargo test --all-features --release
+      - run: cargo test --release
+      - run: cargo test --release --features stream,std
+
+  # TODO(tarcieri): re-unify this with `test` when MSRV is 1.51+
+  heapless:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust:
+          - 1.51.0 # MSRV for `heapless`
+          - stable
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - run: cargo test --release --all-features
