--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -17,6 +17,9 @@ aead = { version = "0.4", default-features = false }
 subtle = "2.4.0"
 zeroize = { version = "1", default-features = false }
 
+[target.'cfg(target_feature="aes")'.dependencies]
+aes = {path = "./block-ciphers/aes", features = ["hazmat"]}
+
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
 hex-literal = "0.3.1"
