--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -36,6 +36,7 @@ std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
 stream = ["aead/stream"]
+armv8 = ["aes/armv8"]
 
 [package.metadata.docs.rs]
 all-features = true
