--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -16,6 +16,7 @@ aes = "0.7.0-pre"
 aes-gcm = { path = "../aes-gcm/" }
 aes-gcm-siv = { path = "../aes-gcm-siv/" }
 chacha20poly1305 = { path = "../chacha20poly1305/" }
+deoxys = { path = "../deoxys/" }
 eax = { path = "../eax/" }
 
 [[bench]]
@@ -31,6 +32,11 @@ harness = false
 [[bench]]
 name = "chacha20poly1305"
 path = "src/chacha20poly1305.rs"
+harness = false
+
+[[bench]]
+name = "deoxys"
+path = "src/deoxys.rs"
 harness = false
 
 [[bench]]
