--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -17,10 +17,10 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-aes = { version = "0.7", optional = true }
+aes = { version = "0.7.2", optional = true }
 cipher = "0.3"
 ctr = "0.7"
-polyval = { version = "0.5", default-features = false }
+polyval = { version = "0.5.1", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
@@ -28,11 +28,13 @@ zeroize = { version = "1", default-features = false }
 aead = { version = "0.4", features = ["dev"], default-features = false }
 
 [features]
-default = ["aes", "alloc"]
-std = ["aead/std", "alloc"]
-alloc = ["aead/alloc"]
-heapless = ["aead/heapless"]
-stream = ["aead/stream"]
+default    = ["aes", "alloc"]
+std        = ["aead/std", "alloc"]
+alloc      = ["aead/alloc"]
+armv8      = ["aes/armv8", "polyval/armv8"] # nightly-only
+force-soft = ["aes/force-soft", "polyval/force-soft"]
+heapless   = ["aead/heapless"]
+stream     = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
