--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -17,10 +17,10 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-aes = { version = "0.7", optional = true }
+aes = { version = "0.7.2", optional = true }
 cipher = "0.3"
 ctr = "0.7"
-ghash = { version = "0.4.1", default-features = false }
+ghash = { version = "0.4.2", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
@@ -29,12 +29,13 @@ aead = { version = "0.4", features = ["dev"], default-features = false }
 hex-literal = "0.2"
 
 [features]
-default = ["aes", "alloc"]
-std = ["aead/std", "alloc"]
-alloc = ["aead/alloc"]
+default    = ["aes", "alloc"]
+std        = ["aead/std", "alloc"]
+alloc      = ["aead/alloc"]
+armv8      = ["aes/armv8", "ghash/armv8"] # nightly-only
 force-soft = ["aes/force-soft", "ghash/force-soft"]
-heapless = ["aead/heapless"]
-stream = ["aead/stream"]
+heapless   = ["aead/heapless"]
+stream     = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
