--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -16,7 +16,7 @@ categories = ["cryptography", "no-std"]
 aead = { version = "0.4", default-features = false }
 subtle = "2.4.0"
 zeroize = { version = "1", default-features = false }
-aes = { git = "https://github.com/RustCrypto/block-ciphers", rev = "758169d", features=["hazmat"], default-features = false}
+aes = { version = "0.7.4", features=["hazmat"], default-features = false}
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
