--- a/mgm/Cargo.toml
+++ b/mgm/Cargo.toml
@@ -20,6 +20,7 @@ subtle = { version = "2", default-features = false }
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
 kuznyechik = "0.7"
+magma = "0.7"
 hex-literal = "0.2"
 
 [features]
