--- a/mgm/Cargo.toml
+++ b/mgm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mgm"
-version = "0.4.1"
+version = "0.4.2"
 description = "Generic implementation of the Multilinear Galois Mode (MGM) cipher"
 authors = ["RustCrypto Developers"]
 edition = "2018"
@@ -20,6 +20,7 @@ subtle = { version = "2", default-features = false }
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
 kuznyechik = "0.7"
+magma = "0.7"
 hex-literal = "0.2"
 
 [features]
