--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-gcm"
-version = "0.9.2"
+version = "0.9.3"
 description = """
 Pure Rust implementation of the AES-GCM (Galois/Counter Mode)
 Authenticated Encryption with Associated Data (AEAD) Cipher
@@ -22,7 +22,7 @@ cipher = "0.3"
 ctr = "0.8"
 ghash = { version = "0.4.2", default-features = false }
 subtle = { version = "2", default-features = false }
-zeroize = { version = "1", optional = true, default-features = false }
+zeroize = { version = "=1.3", optional = true, default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
