--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-siv"
-version = "0.6.1"
+version = "0.6.2"
 description = """
 Pure Rust implementation of the AES-SIV Misuse-Resistant Authenticated
 Encryption Cipher (RFC 5297) with optional architecture-specific
@@ -24,7 +24,7 @@ crypto-mac = "0.11"
 ctr = "0.8"
 dbl = "0.3"
 pmac = { version = "0.6", optional = true }
-zeroize = { version = "1", default-features = false }
+zeroize = { version = "=1.3", default-features = false }
 
 [dev-dependencies]
 blobby = "0.3"
