--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xsalsa20poly1305"
-version = "0.7.1"
+version = "0.7.2"
 description = """
 Pure Rust implementation of the XSalsa20Poly1305 (a.k.a. NaCl crypto_secretbox)
 authenticated encryption algorithm
@@ -20,7 +20,7 @@ salsa20 = { version = "0.8", features = ["xsalsa20", "zeroize"] }
 poly1305 = "0.7"
 rand_core = { version = "0.6", optional = true }
 subtle = { version = "2", default-features = false }
-zeroize = { version = "1", default-features = false }
+zeroize = { version = "=1.3", default-features = false }
 
 [features]
 default = ["alloc", "rand_core", "aead/rand_core"]
