--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -21,7 +21,7 @@ aes = { version = "0.7.4", optional = true }
 cipher = "0.3"
 ctr = "0.8"
 polyval = { version = "0.5.1", default-features = false }
-subtle = { version = "2", default-features = false }
+subtle = { version = "=2.4", default-features = false }
 zeroize = { version = "=1.3", default-features = false }
 
 [dev-dependencies]
