--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "eax"
-version = "0.4.0"
+version = "0.4.1"
 description = """
 Pure Rust implementation of the EAX
 Authenticated Encryption with Associated Data (AEAD) Cipher
@@ -23,7 +23,7 @@ aead = { version = "0.4", default-features = false }
 cipher = "0.3"
 cmac = "0.6"
 ctr = "0.8"
-subtle = { version = "2", default-features = false }
+subtle = { version = "=2.4", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
