--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -19,7 +19,7 @@ aead = { version = "0.4", default-features = false }
 salsa20 = { version = "0.8", features = ["xsalsa20", "zeroize"] }
 poly1305 = "0.7"
 rand_core = { version = "0.6", optional = true }
-subtle = { version = "2", default-features = false }
+subtle = { version = "=2.4", default-features = false }
 zeroize = { version = "=1.3", default-features = false }
 
 [features]
