--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -23,7 +23,7 @@ aead = { version = "0.4", default-features = false }
 cipher = "0.3"
 cmac = "0.6"
 ctr = "0.8"
-subtle = { version = "=2.4", default-features = false }
+subtle = { version = ">=2, <2.5", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
