--- a/.github/workflows/mgm.yml
+++ b/.github/workflows/mgm.yml
@@ -53,7 +53,7 @@ jobs:
           override: true
       - run: cargo test --release
       - run: cargo test --release --features force-soft
-      - run: cargo test --release --all-features
+      - run: cargo test --release --features stream,std
       - run: RUSTFLAGS="-C target-cpu=native" cargo test --release --features stream,std
 
   # TODO(tarcieri): re-unify this with `test` when MSRV is 1.51+
