--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -14,14 +14,14 @@ keywords = ["encryption", "aead"]
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-cipher = { version = "0.3", default-features = false }
-ctr = { version = "0.8", default-features = false }
+cipher = { version = "0.4", default-features = false }
+ctr = { version = "0.9", default-features = false }
 subtle = { version = ">=2, <2.5", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
-aes = { version = "0.7", features = ["force-soft"] } # Uses `force-soft` for MSRV 1.41
-hex-literal = "0.2"
+aes = "0.8"
+hex-literal = "0.3"
 
 [features]
 default = ["alloc"]
