--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -19,10 +19,10 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-chacha20 = { version = "0.8", features = ["zeroize"] }
-cipher = "0.3"
+chacha20 = { version = "0.9", features = ["zeroize"] }
+cipher = "0.4"
 poly1305 = "0.7"
-zeroize = { version = ">=1, <1.5", default-features = false }
+zeroize = { version = "1.5", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
@@ -34,7 +34,7 @@ alloc = ["aead/alloc"]
 heapless = ["aead/heapless"]
 stream = ["aead/stream"]
 reduced-round = []
-force-soft = ["chacha20/force-soft", "poly1305/force-soft"]
+force-soft = ["poly1305/force-soft"]
 
 [package.metadata.docs.rs]
 all-features = true
