--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -18,9 +18,9 @@ edition = "2018"
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
-aes = { version = "0.7.5", features=["hazmat"], default-features = false }
+aes = { version = "0.8", features=["hazmat"], default-features = false }
 subtle = { version = ">=2, <2.5", default-features = false }
-zeroize = { version = ">=1, <1.4", default-features = false }
+zeroize = { version = "1.5", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
