--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -7,7 +7,8 @@ Encryption Cipher (RFC 8452) with optional architecture-specific
 hardware acceleration
 """
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 documentation = "https://docs.rs/aes-gcm-siv"
@@ -22,7 +23,7 @@ cipher = "0.4"
 ctr = "0.9"
 polyval = { version = "0.5.1", default-features = false }
 subtle = { version = ">=2, <2.5", default-features = false }
-zeroize = { version = "1.5", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
