--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -7,7 +7,8 @@ Authenticated Encryption with Associated Data (AEAD) Cipher
 with optional architecture-specific hardware acceleration
 """
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/aes-gcm"
@@ -22,7 +23,7 @@ cipher = "0.4"
 ctr = "0.9"
 ghash = { version = "0.4.2", default-features = false }
 subtle = { version = ">=2, <2.5", default-features = false }
-zeroize = { version = "1.5", optional = true, default-features = false }
+zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
