--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -7,7 +7,8 @@ Encryption Cipher (RFC 5297) with optional architecture-specific
 hardware acceleration
 """
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/aes-siv"
@@ -24,7 +25,7 @@ crypto-mac = "0.11"
 ctr = "0.9"
 dbl = "0.3"
 pmac = { version = "0.7", optional = true }
-zeroize = { version = "1.5", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
 blobby = "0.3"
