--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -3,7 +3,8 @@ name = "ccm"
 version = "0.4.4"
 description = "Generic implementation of the Counter with CBC-MAC (CCM) mode"
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/ccm"
