--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -14,13 +14,14 @@ homepage = "https://github.com/RustCrypto"
 keywords = ["aead", "deoxys", "deoxys-i", "deoxys-ii"]
 categories = ["cryptography", "no-std"]
 readme = "README.md"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
 aes = { version = "0.8", features=["hazmat"], default-features = false }
 subtle = { version = ">=2, <2.5", default-features = false }
-zeroize = { version = "1.5", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
