--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -10,7 +10,8 @@ This scheme is only based on a block cipher. It uses counter mode (CTR) for
 encryption and CBC mode for generating a OMAC/CMAC/CBCMAC (all names for the same thing).
 """
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/eax"
