--- a/mgm/Cargo.toml
+++ b/mgm/Cargo.toml
@@ -3,7 +3,8 @@ name = "mgm"
 version = "0.4.6"
 description = "Generic implementation of the Multilinear Galois Mode (MGM) cipher"
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
+rust-version = "1.56"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/mgm"
