--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -22,7 +22,7 @@ aead = { version = "0.4", default-features = false }
 chacha20 = { version = "0.8", features = ["zeroize"] }
 cipher = "0.3"
 poly1305 = "0.7"
-zeroize = { version = ">=1, <1.5", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.4", features = ["dev"], default-features = false }
