--- a/xsalsa20poly1305/Cargo.toml
+++ b/xsalsa20poly1305/Cargo.toml
@@ -20,7 +20,7 @@ salsa20 = { version = "0.9", features = ["zeroize"] }
 poly1305 = "0.7"
 rand_core = { version = "0.6", optional = true }
 subtle = { version = ">=2, <2.5", default-features = false }
-zeroize = { version = ">=1, <1.4", default-features = false }
+zeroize = { version = "1", default-features = false }
 
 [features]
 default = ["alloc", "rand_core", "aead/rand_core"]
