--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -21,7 +21,7 @@ aes = { version = "0.7.5", optional = true }
 cipher = "0.3"
 ctr = "0.8"
 ghash = { version = "0.4.2", default-features = false }
-subtle = { version = ">=2, <2.5", default-features = false }
+subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
