--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -19,7 +19,7 @@ edition = "2018"
 [dependencies]
 aead = { version = "0.4", default-features = false }
 aes = { version = "0.7.5", features=["hazmat"], default-features = false }
-subtle = { version = ">=2, <2.5", default-features = false }
+subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
