--- a/mgm/Cargo.toml
+++ b/mgm/Cargo.toml
@@ -15,7 +15,7 @@ keywords = ["encryption", "aead"]
 [dependencies]
 aead = { version = "0.4", default-features = false }
 cipher = "0.3"
-subtle = { version = ">=2, <2.5", default-features = false }
+subtle = { version = "2", default-features = false }
 cfg-if = "1"
 
 [target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
