aes-siv: bump `aes` crate to v0.8; MSRV 1.56+

--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-siv"
-version = "0.6.2"
+version = "0.7.0-pre"
 description = """
 Pure Rust implementation of the AES-SIV Misuse-Resistant Authenticated
 Encryption Cipher (RFC 5297) with optional architecture-specific
@@ -17,14 +17,16 @@ categories = ["cryptography", "no-std"]
 
 [dependencies]
 aead = "0.4"
-aes = "0.7"
-cipher = "0.3"
-cmac = "0.6"
-crypto-mac = "0.11"
-ctr = "0.8"
+aes = "0.8"
+cipher = "0.4"
+cmac = "0.7"
+ctr = "0.9"
 dbl = "0.3"
-pmac = { version = "0.6", optional = true }
+digest = { version = "0.10", features = ["mac"] }
 zeroize = { version = "1", default-features = false }
+
+# optional dependencies
+pmac = { version = "0.7", optional = true }
 
 [dev-dependencies]
 blobby = "0.3"
