--- a/.github/workflows/mgm.yml
+++ b/.github/workflows/mgm.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - 1.41.0 # MSRV
+          - 1.56.0 # MSRV
           - stable
         target:
           - thumbv7em-none-eabi
@@ -42,7 +42,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - 1.41.0 # MSRV
+          - 1.56.0 # MSRV
           - stable
     steps:
       - uses: actions/checkout@v1
@@ -54,21 +54,4 @@ jobs:
       - run: cargo test --release
       - run: cargo test --release --features force-soft
       - run: cargo test --release --features stream,std
-      - run: RUSTFLAGS="-C target-cpu=native" cargo test --release --features stream,std
-
-  # TODO(tarcieri): re-unify this with `test` when MSRV is 1.51+
-  heapless:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        rust:
-          - 1.51.0 # MSRV for `heapless`
-          - stable
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ matrix.rust }}
-          override: true
-      - run: cargo test --release --all-features
+      - run: RUSTFLAGS="-C target-cpu=native" cargo test --release --all-features
