--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -7,13 +7,14 @@ Authenticated Encryption with Associated Data (AEAD) Cipher
 with optional architecture-specific hardware acceleration
 """
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/aes-gcm"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
 categories = ["cryptography", "no-std"]
+rust-version = "1.56"
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
