--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -3,7 +3,7 @@ name = "ccm"
 version = "0.5.0-pre"
 description = "Generic implementation of the Counter with CBC-MAC (CCM) mode"
 authors = ["RustCrypto Developers"]
-edition = "2018"
+edition = "2021"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/ccm"
@@ -11,6 +11,7 @@ homepage = "https://github.com/RustCrypto/AEADs"
 repository = "https://github.com/RustCrypto/AEADs/tree/master/ccm"
 categories = ["cryptography", "no-std"]
 keywords = ["encryption", "aead"]
+rust-version = "1.56"
 
 [dependencies]
 aead = { version = "0.4", default-features = false }
