--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -31,8 +31,9 @@ aead = { version = "0.5", features = ["dev"], default-features = false }
 default       = ["alloc", "getrandom"]
 std           = ["aead/std", "alloc"]
 alloc         = ["aead/alloc"]
-getrandom     = ["aead/getrandom"]
+getrandom     = ["aead/getrandom", "rand_core"]
 heapless      = ["aead/heapless"]
+rand_core     = ["aead/rand_core"]
 reduced-round = []
 stream        = ["aead/stream"]
 
