--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -32,8 +32,9 @@ aead = { version = "0.5", features = ["dev"], default-features = false }
 default   = ["aes", "alloc", "getrandom"]
 std       = ["aead/std", "alloc"]
 alloc     = ["aead/alloc"]
-getrandom = ["aead/getrandom"]
+getrandom = ["aead/getrandom", "rand_core"]
 heapless  = ["aead/heapless"]
+rand_core = ["aead/rand_core"]
 stream    = ["aead/stream"]
 
 [package.metadata.docs.rs]
