--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -34,8 +34,9 @@ aes = "0.8"
 default = ["alloc", "getrandom"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
-getrandom  = ["aead/getrandom"]
+getrandom  = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
+rand_core = ["aead/rand_core"]
 stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
