--- a/mgm/Cargo.toml
+++ b/mgm/Cargo.toml
@@ -32,7 +32,8 @@ hex-literal = "0.2"
 default = ["alloc", "getrandom"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
-getrandom  = ["aead/getrandom"]
+getrandom  = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
+rand_core = ["aead/rand_core"]
 stream = ["aead/stream"]
 force-soft = [] # Disable support for hardware intrinsics
