ascon-aead: align features with other AEAD crates

--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -31,7 +31,11 @@ spectral = { version = "0.6", default-features = false }
 default = ["zeroize", "alloc"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
+arrayvec = ["aead/arrayvec"]
+getrandom = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
+rand_core = ["aead/rand_core"]
+stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
