use only snake case

--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ocb3"
 version = "0.1.0"
 description = """
-Pure Rust implementation of the AES-OCB3
+Pure Rust implementation of the OCB3
 Authenticated Encryption with Associated Data (AEAD) Cipher
 """
 authors = ["RustCrypto Developers"]
@@ -11,7 +11,7 @@ license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/ocb3"
 repository = "https://github.com/RustCrypto/AEADs"
-keywords = ["aead", "aes", "encryption", "ocb", "ocb3"]
+keywords = ["aead", "encryption", "ocb", "ocb3"]
 categories = ["cryptography", "no-std"]
 rust-version = "1.56"
 
