add a test run with --no-default-features to ensure that no error creep in by mistake

--- a/.github/workflows/eax.yml
+++ b/.github/workflows/eax.yml
@@ -49,3 +49,4 @@ jobs:
           toolchain: ${{ matrix.rust }}
       - run: cargo test --release
       - run: cargo test --release --all-features
+      - run: cargo test --release --no-default-features
