CI: run workflows when their config files change
Adds each of the workflow config files to their own `on`..`paths:` so
changes to a workflow's configuration run the respective workflow.

--- a/.github/workflows/aes-gcm-siv.yml
+++ b/.github/workflows/aes-gcm-siv.yml
@@ -3,6 +3,7 @@ name: aes-gcm-siv
 on:
   pull_request:
     paths:
+      - ".github/workflows/aes-gcm-siv.yml"
       - "aes-gcm-siv/**"
       - "Cargo.*"
   push:
