--- a/.github/workflows/chacha20poly1305.yml
+++ b/.github/workflows/chacha20poly1305.yml
@@ -3,6 +3,7 @@ name: chacha20poly1305
 on:
   pull_request:
     paths:
+      - ".github/workflows/chacha20poly1305.yml"
       - "chacha20poly1305/**"
       - "Cargo.*"
   push:
