--- a/.github/workflows/ascon-aead.yml
+++ b/.github/workflows/ascon-aead.yml
@@ -62,6 +62,7 @@ jobs:
           toolchain: ${{ matrix.rust }}
           targets: ${{ matrix.target }}
       - run: ${{ matrix.deps }}
+      - run: cargo test --target ${{ matrix.target }} --release --no-default-features
       - run: cargo test --target ${{ matrix.target }} --release
       - run: cargo test --target ${{ matrix.target }} --release --features std,zeroize
       - run: cargo test --target ${{ matrix.target }} --release --all-features
