--- a/.github/workflows/ccm.yml
+++ b/.github/workflows/ccm.yml
@@ -61,6 +61,7 @@ jobs:
           toolchain: ${{ matrix.rust }}
           targets: ${{ matrix.target }}
       - run: ${{ matrix.deps }}
+      - run: cargo test --target ${{ matrix.target }} --release --no-default-features
       - run: cargo test --target ${{ matrix.target }} --release
       - run: cargo test --target ${{ matrix.target }} --release --all-features
       - run: cargo build --target ${{ matrix.target }} --benches
