--- a/.github/workflows/mgm.yml
+++ b/.github/workflows/mgm.yml
@@ -48,6 +48,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
+      - run: cargo test --release --no-default-features
       - run: cargo test --release
       - run: cargo test --release --features force-soft
       - run: cargo test --release --features stream,std
