--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,15 @@ members = [
     "ocb3",
 ]
 resolver = "2"
+
+[patch.crates-io]
+
+# https://github.com/RustCrypto/block-modes/pull/56
+ctr            = { git = "https://github.com/RustCrypto/block-modes.git" }
+
+# https://github.com/RustCrypto/MACs/pull/158
+cmac           = { git = "https://github.com/RustCrypto/MACs.git" }
+pmac           = { git = "https://github.com/RustCrypto/MACs.git" }
+
+# https://github.com/RustCrypto/stream-ciphers/pull/345
+chacha20       = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
