--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -55,8 +55,6 @@ path = "src/eax.rs"
 harness = false
 
 [patch.crates-io]
-aes = { git = "https://github.com/RustCrypto/block-ciphers.git" }
 chacha20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
 cmac = { git = "https://github.com/RustCrypto/MACs.git" }
-ghash = { git = "https://github.com/RustCrypto/universal-hashes.git" }
-polyval = { git = "https://github.com/RustCrypto/universal-hashes.git" }
+ctr = { git = "https://github.com/RustCrypto/block-modes.git" }
