--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-gcm-siv"
-version = "0.11.1"
+version = "0.12.0-pre"
 description = """
 Pure Rust implementation of the AES-GCM-SIV Misuse-Resistant Authenticated
 Encryption Cipher (RFC 8452) with optional architecture-specific
@@ -14,19 +14,19 @@ documentation = "https://docs.rs/aes-gcm-siv"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "aes-gcm", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.56"
+rust-version = "1.65"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
-aes = { version = "0.8", optional = true }
-cipher = "0.4"
-ctr = "0.9"
-polyval = { version = "0.6", default-features = false }
+aead = { version = "=0.6.0-pre.0", default-features = false }
+aes = { version = "=0.9.0-pre", optional = true }
+cipher = "=0.5.0-pre.4"
+ctr = "=0.10.0-pre"
+polyval = { version = "=0.7.0-pre.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.5", features = ["dev"], default-features = false }
+aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
 
 [features]
 default   = ["aes", "alloc", "getrandom"]
