--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aes-gcm"
-version = "0.10.3"
+version = "0.11.0-pre"
 description = """
 Pure Rust implementation of the AES-GCM (Galois/Counter Mode)
 Authenticated Encryption with Associated Data (AEAD) Cipher
@@ -14,24 +14,24 @@ documentation = "https://docs.rs/aes-gcm"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "encryption", "gcm", "ghash"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.56"
+rust-version = "1.65"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
-aes = { version = "0.8", optional = true }
-cipher = "0.4"
-ctr = "0.9"
-ghash = { version = "0.5", default-features = false }
+aead = { version = "=0.6.0-pre.0", default-features = false }
+aes = { version = "=0.9.0-pre", optional = true }
+cipher = "=0.5.0-pre.4"
+ctr = "=0.10.0-pre"
+ghash = { version = "=0.6.0-pre.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.5", features = ["dev"], default-features = false }
+aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
 hex-literal = "0.3"
 
 [features]
 default   = ["aes", "alloc", "getrandom"]
-std       = ["aead/std", "alloc"]
+std       = ["aead/std", "cipher/std", "alloc"]
 alloc     = ["aead/alloc"]
 arrayvec  = ["aead/arrayvec"]
 getrandom = ["aead/getrandom", "rand_core"]
