--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -14,20 +14,20 @@ documentation = "https://docs.rs/aes-siv"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.56"
+rust-version = "1.72"
 
 [dependencies]
-aead = "0.5"
-aes = "0.8"
-cipher = "0.4"
-cmac = "0.7"
-ctr = "0.9"
-dbl = "0.3"
-digest = { version = "0.10", features = ["mac"] }
+aead = "=0.6.0-pre.0"
+aes = "=0.9.0-pre"
+cipher = "=0.5.0-pre.4"
+cmac = "0.8.0-pre"
+ctr = "=0.10.0-pre"
+dbl = "0.4.0-pre.4"
+digest = { version = "0.11.0-pre.8", features = ["mac"] }
 zeroize = { version = "1", default-features = false }
 
 # optional dependencies
-pmac = { version = "0.7", optional = true }
+pmac = { version = "0.8.0-pre", optional = true }
 
 [dev-dependencies]
 blobby = "0.3"
