--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -12,10 +12,10 @@ readme = "README.md"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["AEAD", "ascon", "encryption"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.56"
+rust-version = "1.65"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
+aead = { version = "=0.6.0-pre.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize_crate = { package = "zeroize", version = "1.6", optional = true, default-features = false, features = [
     "derive",
@@ -24,7 +24,7 @@ ascon = "0.4"
 
 [dev-dependencies]
 hex-literal = "0.3"
-aead = { version = "0.5", features = ["alloc"] }
+aead = { version = "=0.6.0-pre.0", features = ["alloc"] }
 
 [features]
 default = ["alloc", "getrandom"]
