--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -11,17 +11,17 @@ homepage = "https://github.com/RustCrypto/AEADs"
 repository = "https://github.com/RustCrypto/AEADs/tree/master/ccm"
 categories = ["cryptography", "no-std"]
 keywords = ["encryption", "aead"]
-rust-version = "1.56"
+rust-version = "1.65"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
-cipher = { version = "0.4.3", default-features = false }
-ctr = { version = "0.9.1", default-features = false }
+aead = { version = "=0.6.0-pre.0", default-features = false }
+cipher = { version = "=0.5.0-pre.4", default-features = false }
+ctr = { version = "=0.10.0-pre", default-features = false }
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.5", features = ["dev"], default-features = false }
-aes = { version = "0.8.4" }
+aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
+aes = { version = "=0.9.0-pre" }
 hex-literal = "0.3.4"
 
 [features]
