--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -16,16 +16,17 @@ documentation = "https://docs.rs/chacha20poly1305"
 repository = "https://github.com/RustCrypto/AEADs/tree/master/chacha20poly1305"
 keywords = ["aead", "chacha20", "poly1305", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
+rust-version = "1.65"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
-chacha20 = { version = "0.9", features = ["zeroize"] }
-cipher = "0.4"
-poly1305 = "0.8"
+aead = { version = "=0.6.0-pre.0", default-features = false }
+chacha20 = { version = "=0.10.0-pre", features = ["zeroize"] }
+cipher = "=0.5.0-pre.4"
+poly1305 = "=0.9.0-pre"
 zeroize = { version = "1.6", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.5", features = ["dev"], default-features = false }
+aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
 
 [features]
 default       = ["alloc", "getrandom"]
