--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -17,18 +17,18 @@ documentation = "https://docs.rs/eax"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "encryption"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.56"
+rust-version = "1.71"
 
 [dependencies]
-aead = { version = "0.5", default-features = false }
-cipher = "0.4"
-cmac = "0.7"
-ctr = "0.9"
+aead = { version = "=0.6.0-pre.0", default-features = false }
+cipher = "=0.5.0-pre.4"
+cmac = "=0.8.0-pre"
+ctr = "=0.10.0-pre"
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.5", features = ["dev"], default-features = false }
-aes = "0.8"
+aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
+aes = "=0.9.0-pre"
 
 [features]
 default = ["alloc", "getrandom"]
