--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -2,8 +2,8 @@
 name = "ocb3"
 version = "0.1.0"
 description = """
-Pure Rust implementation of the OCB3
-Authenticated Encryption with Associated Data (AEAD) Cipher
+Pure Rust implementation of the Offset Codebook Mode v3 (OCB3) Authenticated Encryption with
+Associated Data (AEAD) Cipher as described in RFC7253
 """
 authors = ["RustCrypto Developers"]
 edition = "2021"
@@ -11,7 +11,7 @@ license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/ocb3"
 repository = "https://github.com/RustCrypto/AEADs"
-keywords = ["aead", "encryption", "ocb", "ocb3"]
+keywords = ["aead", "encryption", "ocb"]
 categories = ["cryptography", "no-std"]
 rust-version = "1.60"
 
