cargo: point `repository` metadata to clonable URLs
This tweaks the `repository` fields in Cargo metadata in order to use the correct (i.e. git clonable) URL.
The existing GitHub webUI URLs for each package have been retained and moved to `homepage` fields.

--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -13,7 +13,8 @@ edition = "2021"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/chacha20poly1305"
-repository = "https://github.com/RustCrypto/AEADs/tree/master/chacha20poly1305"
+homepage = "https://github.com/RustCrypto/AEADs/tree/master/chacha20poly1305"
+repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "chacha20", "poly1305", "xchacha20", "xchacha20poly1305"]
 categories = ["cryptography", "no-std"]
 rust-version = "1.65"
