--- a/mgm/Cargo.toml
+++ b/mgm/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/mgm"
-homepage = "https://github.com/RustCrypto/AEADs"
-repository = "https://github.com/RustCrypto/AEADs/tree/master/mgm"
+homepage = "https://github.com/RustCrypto/AEADs/tree/master/mgm"
+repository = "https://github.com/RustCrypto/AEADs"
 categories = ["cryptography", "no-std"]
 keywords = ["encryption", "aead"]
 rust-version = "1.56"
