--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/ccm"
-homepage = "https://github.com/RustCrypto/AEADs"
-repository = "https://github.com/RustCrypto/AEADs/tree/master/ccm"
+homepage = "https://github.com/RustCrypto/AEADs/tree/master/ccm"
+repository = "https://github.com/RustCrypto/AEADs"
 categories = ["cryptography", "no-std"]
 keywords = ["encryption", "aead"]
 rust-version = "1.65"
