--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -20,7 +20,7 @@ rust-version = "1.65"
 aead = { version = "=0.6.0-pre.0", default-features = false }
 aes = { version = "=0.9.0-pre", optional = true }
 cipher = "=0.5.0-pre.4"
-ctr = "=0.10.0-pre"
+ctr = "=0.10.0-pre.0"
 polyval = { version = "=0.7.0-pre.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", default-features = false }
@@ -29,14 +29,14 @@ zeroize = { version = "1", default-features = false }
 aead = { version = "=0.6.0-pre.0", features = ["dev"], default-features = false }
 
 [features]
-default   = ["aes", "alloc", "getrandom"]
-std       = ["aead/std", "alloc"]
-alloc     = ["aead/alloc"]
-arrayvec  = ["aead/arrayvec"]
+default = ["aes", "alloc", "getrandom"]
+std = ["aead/std", "alloc"]
+alloc = ["aead/alloc"]
+arrayvec = ["aead/arrayvec"]
 getrandom = ["aead/getrandom", "rand_core"]
-heapless  = ["aead/heapless"]
+heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
-stream    = ["aead/stream"]
+stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
