--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -21,7 +21,7 @@ aead = "=0.6.0-pre.0"
 aes = "=0.9.0-pre"
 cipher = "=0.5.0-pre.4"
 cmac = "0.8.0-pre"
-ctr = "=0.10.0-pre"
+ctr = "=0.10.0-pre.0"
 dbl = "0.4.0-pre.4"
 digest = { version = "0.11.0-pre.8", features = ["mac"] }
 zeroize = { version = "1", default-features = false }
@@ -38,7 +38,7 @@ default = ["alloc", "getrandom"]
 std = ["aead/std", "alloc"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
-getrandom  = ["aead/getrandom", "rand_core"]
+getrandom = ["aead/getrandom", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
 stream = ["aead/stream"]
