--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -18,7 +18,7 @@ rust-version = "1.72"
 [dependencies]
 aead = { version = "=0.6.0-pre.0", default-features = false }
 cipher = "=0.5.0-pre.4"
-ctr = "=0.10.0-pre"
+ctr = "=0.10.0-pre.0"
 dbl = "=0.4.0-pre.4"
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
@@ -29,14 +29,14 @@ aes = { version = "=0.9.0-pre", default-features = false }
 hex-literal = "0.4"
 
 [features]
-default   = ["alloc", "getrandom"]
-std       = ["aead/std", "alloc"]
-alloc     = ["aead/alloc"]
-arrayvec  = ["aead/arrayvec"]
+default = ["alloc", "getrandom"]
+std = ["aead/std", "alloc"]
+alloc = ["aead/alloc"]
+arrayvec = ["aead/arrayvec"]
 getrandom = ["aead/getrandom", "rand_core"]
-heapless  = ["aead/heapless"]
+heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
-stream    = ["aead/stream"]
+stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
