--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -21,10 +21,10 @@ rust-version = "1.81"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-chacha20 = { version = "=0.10.0-pre.2", default-features = false, features = ["xchacha", "zeroize"] }
+chacha20 = { version = "=0.10.0-pre.2", default-features = false, features = ["xchacha"] }
 cipher = "=0.5.0-pre.7"
 poly1305 = "0.9.0-rc.0"
-zeroize = { version = "1.8", default-features = false }
+zeroize = { version = "1.8", optional = true, default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
@@ -40,6 +40,7 @@ heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
 reduced-round = []
 stream = ["aead/stream"]
+zeroize = ["dep:zeroize", "chacha20/zeroize"]
 
 [package.metadata.docs.rs]
 all-features = true
