benches: fix compilation errors

--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -23,11 +23,11 @@ jobs:
     strategy:
       matrix:
         rust:
-          - 1.65.0 # MSRV
+          - 1.81.0 # MSRV
           - stable
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-      - run: cargo build --release
+      - run: cargo bench --no-run
