--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.56"
 [dependencies]
 criterion = "0.4.0"
 rand = "0.8.5"
-aes = "0.8.2"
+aes = "=0.9.0-pre.2"
 aes-gcm = { path = "../aes-gcm/" }
 aes-gcm-siv = { path = "../aes-gcm-siv/" }
 ascon-aead = { path = "../ascon-aead/" }
@@ -53,8 +53,3 @@ harness = false
 name = "eax"
 path = "src/eax.rs"
 harness = false
-
-[patch.crates-io]
-chacha20 = { git = "https://github.com/RustCrypto/stream-ciphers.git" }
-cmac = { git = "https://github.com/RustCrypto/MACs.git" }
-ctr = { git = "https://github.com/RustCrypto/block-modes.git" }
