aes-gcm-siv: bump to edition 2024; msrv 1.85

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
     "aead-stream",
     "aes-gcm",
-    #"aes-gcm-siv",
+    "aes-gcm-siv",
     #"aes-siv",
     #"ascon-aead",
     #"ccm",
