--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -7,19 +7,19 @@ Encryption Cipher (RFC 8452) with optional architecture-specific
 hardware acceleration
 """
 authors = ["RustCrypto Developers"]
-edition = "2021"
+edition = "2024"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 documentation = "https://docs.rs/aes-gcm-siv"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "aes-gcm", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.81"
+rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-aes = { version = "=0.9.0-pre.2", optional = true }
-cipher = "=0.5.0-pre.7"
+aes = { version = "=0.9.0-pre.3", optional = true }
+cipher = "=0.5.0-pre.8"
 ctr = "0.10.0-pre.2"
 polyval = { version = "0.7.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
@@ -29,15 +29,13 @@ zeroize = { version = "1", optional = true, default-features = false }
 aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
 
 [features]
-default = ["aes", "alloc", "getrandom"]
-std = ["aead/std", "alloc"]
+default = ["aes", "alloc", "os_rng"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-getrandom = ["aead/getrandom", "rand_core"]
+os_rng = ["aead/os_rng", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
-stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
