--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -7,23 +7,23 @@ Encryption Cipher (RFC 5297) with optional architecture-specific
 hardware acceleration
 """
 authors = ["RustCrypto Developers"]
-edition = "2021"
+edition = "2024"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/aes-siv"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "encryption", "siv"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.81"
+rust-version = "1.85"
 
 [dependencies]
 aead = "0.6.0-rc.0"
-aes = "=0.9.0-pre.2"
-cipher = "=0.5.0-pre.7"
+aes = "=0.9.0-pre.3"
+cipher = "=0.5.0-pre.8"
 cmac = "0.8.0-pre.2"
 ctr = "0.10.0-pre.2"
 dbl = "0.4.0-rc.1"
-digest = { version = "=0.11.0-pre.9", features = ["mac"] }
+digest = { version = "=0.11.0-pre.10", features = ["mac"] }
 zeroize = { version = "1", optional = true, default-features = false }
 
 # optional dependencies
@@ -34,15 +34,13 @@ blobby = "0.3"
 hex-literal = "0.4"
 
 [features]
-default = ["alloc", "getrandom"]
-std = ["aead/std", "alloc"]
+default = ["alloc", "os_rng"]
 alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-getrandom = ["aead/getrandom", "rand_core"]
+os_rng = ["aead/os_rng", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
-stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
