--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "aes-gcm-siv",
     "aes-siv",
     "ascon-aead",
-    #"ccm",
+    "ccm",
     #"chacha20poly1305",
     #"deoxys",
     #"eax",
